k8s/challengeone-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: challengeone
  labels:
    name: challengeone
