k8s/challengeone-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challengeone
  namespace: challengeone
  labels:
    app: challengeone
spec:
  replicas: 2
  selector:
    matchLabels:
      app: challengeone
  template:
    metadata:
      labels:
        app: challengeone
    spec:
      containers:
        - name: challengeone
          image: thiagotierre/challengeone:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 5
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
