k8s/challengeone-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: challengeone-db
  namespace: challengeone
spec:
  selector:
    app: challengeone-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
